2008-06-10  Matthias Clasen <mclasen@redhat.com>

	Bug 528600 – g_dummy_file_get_parent("scheme://example.com/")

	* gdummyfile.c (g_dummy_file_get_parent): Return NULL if there
	is no parent.  (Owen Taylor, patch by Christian Persch)
	
2008-06-10  Paolo Borelli  <pborelli@katamail.com>

	* gfile.c (g_file_replace_contents): do not leak the output stream.

2008-06-10  Michael Natterer  <mitch@imendio.com>

	* gcontenttype.c (g_content_type_get_icon): fix SEGV by not using
	uninitialized memory as array index.

2008-06-10  Tor Lillqvist  <tml@novell.com>

	* gcontenttype.c (g_content_type_can_be_executable)
	(g_content_type_get_icon) [Win32]: Add TODO comments.

2008-06-09  Matthias Clasen  <mclasen@redhat.com>

	* xdgmime/Makefile.am: Fix the build

2008-06-09  Matthias Clasen  <mclasen@redhat.com>

	* gcontenttype.c (g_content_type_get_icon): Use icons specified
	in the shared mime database, if available.

	* xdgmime/*: Sync with upstream. This brings support for
	glob weights, generic icons, and changes the cache format to 
	version 1.1.

2008-05-28  Michael Natterer  <mitch@imendio.com>

	* Makefile.am: don't define G_DISABLE_SINGLE_INCLUDES, it's in
	the global CPPFLAGS now.

	* tests/data-input-stream.c
	* tests/data-output-stream.c
	* tests/g-file-info.c
	* tests/g-file.c
	* tests/live-g-file.c
	* tests/memory-input-stream.c: don't include <glib/gtestutils.h>

2008-05-27  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.0 ===

	* tests/live-g-file.c: Clean up after the tests, so make distcheck
	doesn't complain about leftover files.

2008-05-27  simon.zheng  <simon.zheng@sun.com>

	* glocalfile.c: (g_local_file_query_filesystem_info):
        Fix #533369. Make G_FILE_ATTRIBUTE_FILESYSTEM_TYPE work on Solaris.

2008-05-26  Michael Natterer  <mitch@imendio.com>

	* gmemoryoutputstream.h: declare
	g_memory_output_stream_get_data_size().

2008-05-26  Matthias Clasen  <mclasen@redhat.com>

	* tests/*: Make tests work 
