@@ -578,7 +578,7 @@ g_local_file_enumerate_children (GFile                *file,
 				 GError              **error)
 {
   GLocalFile *local = G_LOCAL_FILE (file);
-  return _g_local_file_enumerator_new (local->filename,
+  return _g_local_file_enumerator_new (local,
 				       attributes, flags,
 				       cancellable, error);
 }
@@ -618,6 +618,10 @@ get_fs_type (long f_type)
     {
     case 0xadf5:
       return "adfs";
+    case 0x5346414f:
+      return "afs";
+    case 0x0187:
+      return "autofs";
     case 0xADFF:
       return "affs";
     case 0x42465331:
