@@ -1,5 +1,13 @@
 2008-06-10  Matthias Clasen <mclasen@redhat.com>
 
+	Bug 536641 – Filesystem querying in gio does not list AFS and autofs
+	file systems
+
+	* glocalfile.c (get_fs_type): Add afs and autofs.
+	Patch by Danny Baumann.
+
+2008-06-10  Matthias Clasen <mclasen@redhat.com>
+
 	Bug 528600 – g_dummy_file_get_parent("scheme://example.com/")
 
 	* gdummyfile.c (g_dummy_file_get_parent): Return NULL if there
